Fix visibility boolean

--- a/public/styles.css
+++ b/public/styles.css
@@ -15,7 +15,6 @@
 .left-sidebar {
   background: #222b37 !important;
   font-family: 'Montserrat', sans-serif !important;
-  height: 100vh !important;
 }
 
 .message-list {
